fixed file too large render error

--- a/src/components/stylesheets/styles.scss
+++ b/src/components/stylesheets/styles.scss
@@ -308,6 +308,7 @@ body {
 #max-tags-reached { display: none; }
 #duplicate-tags { display : none; }
 #duplicate-files { display: none; }
+#file-too-large { display: none; }
 
 
 // Client End CSS
